fix bug in liq portfolio

--- a/Backoffice/Components/Liquidity/AssetPortfolio/LeTradePortolioComponent.razor
+++ b/Backoffice/Components/Liquidity/AssetPortfolio/LeTradePortolioComponent.razor
@@ -183,6 +183,7 @@
         {
             _trades.Add(response.Trade);
             await Refresh();
+            OnCloseCreateDialog();
         } else 
         {
             ShowError = true;
