- change external markets settings model;

--- a/Backoffice/Components/ExternalMarkets/ExternalMarketsDetailsDialog.razor
+++ b/Backoffice/Components/ExternalMarkets/ExternalMarketsDetailsDialog.razor
@@ -1,4 +1,4 @@
-﻿@using Service.External.B2C2.Domain.Models.Settings
+﻿@using MyJetWallet.Sdk.ExternalMarketsSettings.Models
 
 <BaseOneButtonsDialog Caption=@($"{Item.Market}") OnClose="OnClose" ButtonCaption="Close">
     <table>
