--- a/Backoffice/Components/ExternalMarkets/ExternalMarketsDetailsDialogEdit.razor
+++ b/Backoffice/Components/ExternalMarkets/ExternalMarketsDetailsDialogEdit.razor
@@ -1,4 +1,4 @@
-﻿@using Service.External.B2C2.Domain.Models.Settings
+﻿@using MyJetWallet.Sdk.ExternalMarketsSettings.Models
 
 <BaseTwoButtonsDialog
     Caption=@(!IsCreate ? $"{Item.Market} " : "Create a new External Market")
