- fix external markets nav;

--- a/Backoffice/Pages/ExternalMarkets.razor
+++ b/Backoffice/Pages/ExternalMarkets.razor
@@ -1,6 +1,9 @@
 ﻿@using Backoffice.Services.ExternalMarkets
 
+@page "/ExternalMarkets"
+
 @inject IExternalMarketsSettingsManager _manager
+
 
 @{
     var externalMarketsSettingsServices = _manager.GetExternalMarketsSettingsServices();
