--- a/Backoffice/Components/Fees/Instruments/InstrumentFeesDetailsDialog.razor
+++ b/Backoffice/Components/Fees/Instruments/InstrumentFeesDetailsDialog.razor
@@ -6,7 +6,7 @@
         <td>
             <table>
                 <tr><td>Broker</td><td class="float-left">@Item.BrokerId</td></tr>
-                <tr><td>Asset</td><td class="float-left">@Item.SpotInstrumentId</td></tr>
+                <tr><td>Instrument</td><td class="float-left">@Item.SpotInstrumentId</td></tr>
                 <tr></tr>
                 <tr><td>Fee type</td><td class="float-left">@Item.FeeType</td></tr>
                 <tr><td>Fee account id</td><td class="float-left">@Item.AccountId</td></tr>
