--- a/Backoffice/Components/Fees/Instruments/InstrumentFeesListComponent.razor
+++ b/Backoffice/Components/Fees/Instruments/InstrumentFeesListComponent.razor
@@ -1,6 +1,7 @@
 ﻿@using Backoffice.Services.Fees.Instruments
 @using Service.Fees.Domain.Models
 @using Backoffice.Abstractions.Models
+
 @inject IInstrumentFeesManager InstrumentFeesManager;
 @inject IToaster ToastService
 
@@ -8,7 +9,7 @@
 
 <ul class="nav float-left">
     <li><button @onclick="OnRefresh" type="button" class="btn btn-outline-primary" style="margin: 5px; border-radius: 10px">Refresh</button></li>
-    <li><button @onclick="OnAddAsset" type="button" class="btn btn-outline-success" style="margin: 5px; border-radius: 10px">Add</button></li>
+    <li><button @onclick="OnAddInstrument" type="button" class="btn btn-outline-success" style="margin: 5px; border-radius: 10px">Add</button></li>
 </ul>
 
 <table class="table">
@@ -25,9 +26,9 @@
         </tr>
     </thead>
     <tbody>
-        @foreach(var assetFees in InstrumentFeesList)
+        @foreach(var instrumentFees in InstrumentFeesList)
         {
-            <AssetFeesTableRow Item="@assetFees" LoaderConfig="@LoaderConfig" OnDeleteCallback="DeleteAssetFee" />
+            <InstrumentFeesTableRow Item="@instrumentFees" LoaderConfig="@LoaderConfig" OnDeleteCallback="DeleteInstrumentFee" />
         }
     
     </tbody>
@@ -36,7 +37,7 @@
 @if (IsShowAdding)
 {
     <div>
-        <AssetFeesDetailsDialogEdit IsCreate="true" OnCloseCallback="OnCloseAddingDialog" OnCreateCallback="OnCreateAsset" />
+        <InstrumentFeesDetailsDialogEdit IsCreate="true" OnCloseCallback="OnCloseAddingDialog" OnCreateCallback="OnCreateInstrument" />
     </div>
 }
 
@@ -67,7 +68,7 @@
         base.OnInitialized();
     }
 
-    private async Task OnAddAsset()
+    private async Task OnAddInstrument()
     {
         IsShowAdding = true;
         await InvokeAsync(StateHasChanged);
