- add balance change history to fees wallet;

--- a/Backoffice/Components/Fees/Balance/FeesBalanceComponent.razor
+++ b/Backoffice/Components/Fees/Balance/FeesBalanceComponent.razor
@@ -36,6 +36,8 @@
     </tbody>
 </table>
 
+<FeesBalanceHistoryComponent WalletId="@Program.Settings.FeesWalletId"/>
+
 @code {
 
     private ILoaderConfiguration LoaderConfig { get; set; } = new LoaderConfiguration();
