--- a/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
+++ b/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
@@ -16,6 +16,9 @@
     <li class="nav-item" style="margin: 10px">
         <button class="nav-link @CheckActive(AssetPortfolioPages.ChangeBalanceHistory)" aria-current="page" @onclick="SetChangeBalanceHistory" >Change Balance History</button>
     </li>
+        <li class="nav-item" style="margin: 10px">
+            <button class="nav-link @CheckActive(AssetPortfolioPages.Settings)" aria-current="page" @onclick="SetSettings" >Settings</button>
+        </li>
 </ul>
 
 @if (ActivePage == AssetPortfolioPages.AssetPortfolio)
@@ -92,6 +95,10 @@
 @if (ActivePage == AssetPortfolioPages.ChangeBalanceHistory)
 {
     <LeChangeBalanceHistoryComponent />
+}
+@if (ActivePage == AssetPortfolioPages.Settings)
+{
+    <LeAssetPorfolioSettingsComponent />
 }
 
 @if (IsShowEdit)
@@ -197,7 +204,8 @@
     {
         AssetPortfolio,
         Trades,
-        ChangeBalanceHistory
+        ChangeBalanceHistory,
+        Settings
     }
     
     private string CheckActive(AssetPortfolioPages target)
@@ -264,5 +272,11 @@
             await Refresh();
         }
         OnCloseEditDialog();
+    }
+
+    private void SetSettings()
+    {
+        ActivePage = AssetPortfolioPages.Settings;
+        StateHasChanged();
     }
 }
