--- a/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
+++ b/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
@@ -40,12 +40,12 @@
         {
             <tr>
             <td><b>@wallet.WalletName</b></td>
-            <td>@wallet.NetUsdVolume</td>
+            <td>@Math.Round(wallet.NetUsdVolume)</td>
             </tr>
         }
         <tr>
             <td></td>
-            <td><b>@_balanceByWallets.Sum(elem => elem.NetUsdVolume)</b></td>
+            <td><b>@Math.Round(_balanceByWallets.Sum(elem => elem.NetUsdVolume))</b></td>
         </tr>
         </tbody>
     </table>
@@ -72,16 +72,16 @@
                     <td>
                         @if (netBalanceByAsset.WalletBalances.First(elem => elem.WalletName == wallet.WalletName).NetVolume != 0)
                         {
-                            <span><b>@netBalanceByAsset.WalletBalances.First(elem => elem.WalletName == wallet.WalletName).NetVolume</b></span>
+                            <span><b>@Math.Round(netBalanceByAsset.WalletBalances.First(elem => elem.WalletName == wallet.WalletName).NetVolume)</b></span>
                             <br>
-                            <span>USD: @netBalanceByAsset.WalletBalances.First(elem => elem.WalletName == wallet.WalletName).NetUsdVolume</span>
+                            <span>USD: @Math.Round(netBalanceByAsset.WalletBalances.First(elem => elem.WalletName == wallet.WalletName).NetUsdVolume)</span>
                         }
                     </td>
                 }
                 <td style="background: lightgray">
-                    <span><b>@netBalanceByAsset.NetVolume</b></span>
+                    <span><b>@Math.Round(netBalanceByAsset.NetVolume)</b></span>
                     <br>
-                    <span>USD: @netBalanceByAsset.NetUsdVolume</span>
+                    <span>USD: @Math.Round(netBalanceByAsset.NetUsdVolume)</span>
                 </td>
             </tr>
         }
