change button name

--- a/Backoffice/Components/Liquidity/AssetPortfolio/LeAssetPorfolioSettingsComponent.razor
+++ b/Backoffice/Components/Liquidity/AssetPortfolio/LeAssetPorfolioSettingsComponent.razor
@@ -42,7 +42,7 @@
     <ul class="nav align-middle">
         <li><button style="margin-left: 10px" type="button" class="btn-outline-danger btn" @onclick="ApplySettings">Apply</button></li>
         <li><button style="margin-left: 10px" type="button" class="btn-outline-info btn" @onclick="ResetSettings">Refresh</button></li>
-        <li><button style="margin-left: 10px" type="button" class="btn-outline-info btn" @onclick="CreateNew">Create new</button></li>
+        <li><button style="margin-left: 10px" type="button" class="btn-outline-info btn" @onclick="CreateNew">Report trade</button></li>
     </ul>
 </div>
 
