public key presence display fix

--- a/Backoffice/Components/Clients/ClientSessionsComponent.razor
+++ b/Backoffice/Components/Clients/ClientSessionsComponent.razor
@@ -59,7 +59,7 @@
                 <td>@session.Passed2FA</td>
                 <td>@session.EmailVerified</td>
                 <td>@session.Description</td>
-                <td>@string.IsNullOrWhiteSpace(session?.PublicKeyBase64)</td>
+                <td>@(!string.IsNullOrWhiteSpace(session?.PublicKeyBase64))</td>
                 <td>@tokenExists
                     @if (tokenExists)
                     {
