--- a/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
+++ b/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
@@ -74,12 +74,17 @@
                 <td><b>@netBalanceByAsset.Asset</b></td>
                 @foreach (var wallet in _balanceByWallets.OrderBy(elem => elem.WalletName))
                 {
-                    <td>
+                    <td style="background: @GetAssetCellBackgroundStyle(netBalanceByAsset)">
                         @if (netBalanceByAsset.WalletBalances.First(elem => elem.WalletName == wallet.WalletName).NetVolume != 0)
                         {
                             <span><b>@Math.Round(netBalanceByAsset.WalletBalances.First(elem => elem.WalletName == wallet.WalletName).NetVolume, 8)</b></span>
                             <br>
                             <span>USD: @Math.Round(netBalanceByAsset.WalletBalances.First(elem => elem.WalletName == wallet.WalletName).NetUsdVolume, 2)</span>
+                        }
+                        @if (netBalanceByAsset.BalanceState != AssetBalanceState.Normal)
+                        {
+                            <br>
+                            <span>@netBalanceByAsset.BalanceState</span>
                         }
                     </td>
                 }
@@ -254,7 +259,6 @@
         _balanceByWallets = response.BalanceByWallet ?? new List<NetBalanceByWallet>();
         _balanceByAssets = response.BalanceByAsset ?? new List<NetBalanceByAsset>();
 
-        
         var exchangeCollectionResponse = await _externalExchangeTradeService.GetExternalExchangeCollectionAsync();
         ExchangeList = exchangeCollectionResponse.ExchangeNames;
         
@@ -408,4 +412,14 @@
         StateHasChanged();
     }
 
+    private string GetAssetCellBackgroundStyle(NetBalanceByAsset netBalanceByAsset)
+    {
+        return netBalanceByAsset.BalanceState switch
+        {
+            AssetBalanceState.Warning => "lightyellow",
+            AssetBalanceState.Danger => "lightsalmon",
+            AssetBalanceState.Critical => "lightcoral",
+            _ => string.Empty
+            };
+    }
 }
